# learning-rust

./: Cargo.toml
arrays-and-tuples/: Cargo.toml
arrays-and-tuples/src/: main.rs
closures/src/: main.rs
control-structures/: Cargo.toml
control-structures/src/: main.rs
doc-tests/src/: lib.rs
functions/src/: main.rs
iterator/src/: main.rs
iterators/src/: main.rs  ms_learn.rs
modules/: Cargo.toml
modules/src/: file_3.rs  main.rs
nouman-azam/: Cargo.toml
nouman-azam/pages/: index.html  page1.html
nouman-azam/src/: async_await.rs  closures.rs  files.rs  generics.rs  hashmap.rs  macros.rs  main.rs  question_mark.rs  scoped_threads.rs  threads.rs  traits.rs  unit_tests.rs  vectors.rs
nouman-azam/src/modules/: file_1.rs
nouman-azam/src/practice/: longest_non_stop_employee.rs  mod.rs  product_popularity.rs  web_scraper.rs
nouman-azam/src/smart_pointers/: mod.rs  ref_cell_sp.rs
ownership/src/: main.rs
pages/: 404.html
playground/src/: main.rs
rusty-journal/src/: main.rs  tasks.rs
src/: arrays_and_tuples.rs  builder_pattern.rs  control_structures.rs  enums.rs  main.rs  mutex.rs  option.rs  regex.rs  strings.rs  structs.rs  traits.rs  web.rs
src/iterators/: it_practice.rs  mod.rs
src/modules/: file_1.rs  file_2.rs  mod.rs  modules.rs  modules_ms_learn.rs
src/practice/: blockchain.rs  control_structures.rs  employee_with_no_meeting.rs  highest_stock_price.rs  mod.rs  search_results.rs  sim_game.rs
src/smart_pointers/: box_sp.rs  custom_smart_pointers.rs  (+5 more)
structures-traits-generics-enums/: Cargo.toml
third-party-crates/: Cargo.toml
(+16 files in other folders)
