[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
chrono = "0.4.30"
regex = "1.4.2"
sha256 = "1.4.0"
tokio = { version = "1.32.0", features = ["full"] }
ureq = "2.7.1"
